2012-11-16  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi: Various copy-edits to comply with GCC coding
	standards for spelling, terminology, and markup, including use of
	American spelling, correct use of terms like "back end" and
	"run time", use correct name for GCC, use "@:" markup.

2012-11-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/55329
	* tree-ssa-dom.c (tree_ssa_dominator_optimize): Never clear
	bits in needed_eh_cleanup while iterating over the bitmap.
	Look through all forwarder blocks at once.

2012-11-16  Jan Hubicka  <jh@suse.cz>

	* params.def (max-peeled-insns, max-completely-peeled-insns): Reduce to 100.

2012-11-16  Simon Baldwin  <simonb@google.com>

	* doc/cppopts.texi: Document -f[no-]canonical-system-headers.
	* doc/install.texi: Document --enable-canonical-system-headers.

2012-11-16  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/55330
	* lra-constraints.c (MAX_INHERITANCE_PASSES): New macro.
	(lra_inheritance, lra_undo_inheritance): Use it to limit number of
	the passes.

2012-11-16  Matthias Klose  <doko@ubuntu.com>

	* config/pa/t-linux: New file; define MULTIARCH_DIRNAME.
	* config.gcc <hppa*64*-*-linux*, hppa*-*-linux*> (tmake_file):
	Include pa/t-linux.

2012-11-16  Jakub Jelinek  <jakub@redhat.com>

	PR target/54073
	* config/i386/i386.md (mov<mode>cc): Use comparison_operator
	instead of ordered_comparison_operator resp.
	ix86_fp_comparison_operator predicates.
	* config/i386/i386.c (ix86_expand_fp_movcc): Reject TImode
	or for -m32 DImode comparisons.

2012-11-16  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/54717
	* tree-ssa-pre.c (do_partial_partial_insertion): Consider also edges
	with ANTIC_IN.

2012-11-16  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386-protos.h (ix86_emit_mode_set): Add third argument.
	* config/i386/i386.h (EMIT_MODE_SET): Update.
	* config/i386/i386.c (ix86_avx_emit_vzeroupper): New function.