@@ -1,3 +1,9 @@
+2012-11-17  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR rtl-optimization/55342
+	* lra-assigns.c (spill_for): Try to allocate other reload pseudos
+	before and after spilling.
+
 2012-11-16  Sandra Loosemore  <sandra@codesourcery.com>
 
 	* doc/extend.texi: Various copy-edits to comply with GCC coding
